--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Find where to eat around you",
   "main": "server.js",
   "scripts": {
+    "start": "node server/server.js",
+    "build": "webpack --config webpack.config.babel.js",
+    "br": "npm run build && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +24,12 @@
   },
   "homepage": "https://github.com/pbnPierre/onmangeou#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "express": "^4.15.2",
+    "webpack": "^2.5.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
